# sound-deck

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  audio_panel.cpp  audio_panel.hpp  audio_panel.ui  config.cpp  config.hpp  control_panel.cpp  control_panel.hpp  control_panel.ui  main.cpp  main_test.cpp  main_window.cpp  main_window.hpp  main_window.ui  resources.qrc
